# C-

./: maxLengthWorld.cpp  test  test.cpp  test2.cpp
Qt/QComboBox/: CMakeLists.txt  QComboBox_zh_CN.ts  main.cpp
Qt/Qt_test/: CMakeLists.txt  widget.cpp  widget.h
Qt/build-QComboBox-Desktop-Debug/: CMakeCache.txt  Makefile  QComboBox  cmake_install.cmake  qtcsettings.cmake
Qt/build-Qt_test-Desktop-Debug/: CMakeCache.txt  Makefile  Qt_test  cmake_install.cmake
boost/iostream/: CMakeLists.txt  compress.cpp
c++/: enum  find  lockguard  th
c++/enum_enumclass/: enum_test.cpp
c++/stl/: std_find.cpp
c++/thread/: lock_guard.cpp  thread_demo.cpp
cuda/: CMakeLists.txt  a.out  hellocuda
getmaxsubstring/: getmaxlength.cpp  test
ipc/meaasge_queue/: CMakeLists.txt  message_queue_recv.cpp  message_queue_send.cpp
ipc/sem/: sem.cpp  test
ipc/semaphore/: dis1  dis2  sem_display.cpp  sem_display2.cpp
ipc/sharememory/: read  shm_read.cpp  shm_write.cpp  write
leetcode/: 2N.cpp  movetohead.cpp  static_call_nostatic.cpp  test
libtorch/: CMakeLists.txt  main.cpp
mul_thread/: async  mpi—test  openmp  package  test  test_thread  thread_test_
mul_thread/parallel/: async_future.cpp  openmp.cpp
mul_thread/parll/: package_task_future.cpp
opencl/: CMakeLists.txt  HelloOpenCL
opencv/: CMakeLists.txt  cuda.py  cudaopencv.cpp  openc_build  opencv_01.py
opengl/: tea_Pot
socket/: Makefile  client  epoll_client  epoll_client.cpp  epoll_header.hpp  epoll_main.cpp  epoll_service  epoll_service.cpp  select_service.cpp  sendfile  sendfile.cpp  service  sevice.cpp  test
(+42 files in other folders)
